--- a/20181102.md
+++ b/20181102.md
@@ -250,7 +250,49 @@ KDDIと楽天が提携!?
 
 ---
 
+### ドリームワークス（映画）
 
+俺が通信会社だってこと知ってたからか、テレビ電話システムを見せられた。
 
+自分で開発した。って。
 
+顔の大きさがわかるぐらいのすげーやつ。面白い。
+
+でも、すげえ通信料かかる。笑
+
+これをパクってシスコがやった。リアリティのこだわりはしてへんかったけど。
+
+---
+
+### 心斎橋キャンパス
+
+<img src="https://lh3.googleusercontent.com/aB5IEiavRQLY_tulNuqzrw-LwYGjfjkkFXZCEbq6_9PiNBEIQvprbHSkJX25G1bdtypGJNH4ylZR1aCjRlzNrYMFhRXRIoX4c60yDKj6MeJCbRAbntb5mKhsKFPENAliJci3XbvlHQp4LVLkqmxe7b5ZVFsMx2pCaDSjoosr60Evyno3bjAat-xb9c8ruE5HjDZ-ldaQV_fNlu2c6Xx6H72J_Fh-sjkV2P34Ho1k1vgklJUvi_MIFmp1jhhcwIiNTg_fTOsb5pjbjKb5o4YfJb-vNnVImajW4ZyBgYHrGtTiYbtLLv9vYhqWRhgu7_oOpMu9C829P_GQOsImW9kwQUwQx5QnliOu6jvF7j1WM8nDya0-C6MpiLeX8kIugPsICzZ0a1_g1S9QERt1DCmChvJ_DXmCeEKIps8smYtHANYtWDArKns3fj3u_dS_64zUABfl5gFgM7P7BVynyj-CLXSo2f-An97KCTc-mGeH1G5NX6uRSNCJKW2-enTHJz_Rak8D4JMvdAD5NhyUDMHHawZIGoG97axJYQ19svdtkfABoFbVyLlM7s_HAz9vYRu9l92sYrJVakD6dy3AotsGtfhY1dzz0tApFE_R-8P13Dv2jXa30K6mSD6fLmOtM16wqO0Q7TJQw3lAjBXdh3VacDl7ag=w2104-h1578-no">
+
+#### フィードバック
+
+**客観性** があって、**独自性**もあってよかった。
+
+都市ボランティアっていうのをもうちょっときちんと、共感させられると**100点**でした！
+
+すごくうまくプレゼンしていて、よかったと思いました。
+
+### 名古屋キャンパス
+
+<img src="https://lh3.googleusercontent.com/FHCb07ACwYqhx4fKOhtXDZ5j_c6LwyIC7umKbjgRuXBV2tmG-zsnqJeXK9R_xrreRze6yVPDo2fKxy_T_vW2a7tKWYij2mTCuo8hH79AABKm6YGcZeH_alk4ojrJ8wlHWMmAd95szQVeAPw1MGSswWjknqNHEXyw_8m1Ag8AuskgjdRUTlCVZO36ZHLPMly09uGvK1HHFIJWXcDnhD66i8vd5xOfDERLVCucbtZox26_kzTX8FEkJaYC2Gi-nMEpTLUJMiPzmN4WI-wTklWCct-gXR8C0BFinViT2RJSLcWXIYHFlkKntgznHa8kExCT_4LD6Vdw0TivkoP_4fzHyaSD7ipIuFWemb-TuNWBSnxZXsX4Fto3WyN4skkksqyu5roO_0Lg1RL714odxolnlWMdb9YOdbfFGQk6xeoHg2z2Ja3V3MYEalIzRl5TlahM52wulccuWbiguxU9sA3tp0bCihjxA1t5F9vnbWGL7ts10o_7kPvC_QC8e73ZSmldvM5kOquP44Mlv0b7AjYQH_2SAHeQ_Z9Le4LPPwTIgWz8N9kQNtBDXv_DDgI_zRjx31henNIohO_K-nBex-Nrf4DsJM-fAhu2GM45xnu6p14CmJdU_ENL4R9uoqYiHDYL0Zb24M76BIGp10WzKfjzLr3DPQ=w2104-h1578-no">
+
+#### フィードバック
+
+大会ボランティア、都市ボランティアの違いがよくわかりました。
+
+もう少し言葉をスライドに入れてもよかったのかもしれません。
+
+さっきの **網羅性** とか重視してもよかったのかもね。
+
+今の2人のプレゼンは組み合わせるともっといいものになる。
+
+### 福岡キャンパス
+
+<img src="">
+
+#### フィードバック
 
