[Update] last commit .

--- a/20181102.md
+++ b/20181102.md
@@ -300,3 +300,32 @@ KDDIと楽天が提携!?
 
 ---
 
+3人いたけど、資料の作り方も喋り方も全然違うよね。
+でもそれでいいの。
+
+スライドに書いてあることを読む人がいなくてよかったです。
+
+それにならないように気をつけてね。
+
+音読よりも黙読の方が早い。
+
+だから眠くなっちゃう。
+
+自分の言葉に置き換えてスライドに書いてあることを読むことも大切だよ。
+
+スライドは、自分のしゃべりのガイドライン。
+
+脱線が多い人は途中で何喋ってるかわかんなくなっちゃうから。
+
+重要なデータもスライドの中に入れるといいよ。
+
+皆さんなりに、「ここはうまく真似したい」とか取捨選択して、いいとこ取りして
+
+**自分の**プレゼン作っていってくださいね。
+
+本当に恥ずかしがるのもやめましょう。自分の信じる通りにやって、フィードバックをもとに修正していこう。
+
+社会人以上にうまいプレゼンやっていこうね。
+
+自分なりに。
+
